Revert "Stop scrollbar from causing content shift"
This reverts commit 4223540c4f587611e8ef56b1696dc3c58d254c26.

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -198,16 +198,3 @@
 .cp__sidebar-main-content[data-is-global-graph-pages='true'] {
   padding: 0;
 }
-
-@supports not (overflow-y: overlay) {
-  .scrollbar-spacing {
-    overflow-y: auto;
-  }
-}
-
-@supports (overflow-y: overlay) {
-  .scrollbar-spacing {
-    overflow-y: overlay;
-  }
-}
-
